--- a/templates/select.html
+++ b/templates/select.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Welcome to the Survey Selection</h1>
-<form action="/begin_survey">
+<form action="/begin_survey" method="POST">
     <select name="survey_title">
         {% for title in titles %}
         <option value={{title}}>{{title}}</option>
