--- a/templates/question.html
+++ b/templates/question.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>{{question}}</h1>
-<form action="/{{survey}}/answer/{{id}}" method="POST">
+<form action="/answer" method="POST">
     {% for choice in choices %}
     <label for={{choice}}>{{choice}}</label>
     <input id={{choice}} value={{choice}} type="radio" name=choice>
